--- a/sniffer.conf
+++ b/sniffer.conf
@@ -3,4 +3,5 @@
 remote_url: sniffer-server.construct.pw/packets/
 interface: mon0
 server: 192.168.2.10
-location: stv
+location: b0bs_apt
+device: b0bs_desktop
