Added setup script (sssniff.py)

--- a/sniffer.conf
+++ b/sniffer.conf
@@ -1,7 +1,17 @@
 # sniffer.conf
 
-remote_url: sniffer-server.construct.pw/packets/
-interface: mon0
-server: 192.168.2.10
-location: b0bs_apt
-device: b0bs_desktop
+!settings # basic settings
+remote_url=sniffer-server.construct.pw/packets/
+name=b0bs_desktop
+netctl_profile=legrandNET
+interface=mon0
+server=192.168.2.10
+location=b0bs_apt
+
+
+!netctl # netctl profile settings
+Connection=wireless
+Security=wpa
+ESSID=legrandNET_B/G/N
+IP=dhcp
+Key=pharmacy\ teacher\ fire\ computer
